--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,12 +5,7 @@
 }
 
 ._container {
-    position: absolute;
-    width: 1440px;
-    height: 192px;
-    left: 0px;
-    top: 0px;
-
+    margin-top: 34px;
     background: #FFFFFF;
     box-shadow: 0px 10px 30px rgba(141, 114, 32, 0.05);
 }
@@ -22,6 +17,23 @@
     height: 50%;
     width: 100%;
 }
+
+._botaoEntrar {
+    height: 40px;
+    width: 114px;
+    border-radius: 8px;
+    color: #FFFFFF;
+    background: #C92071;
+}
+
+._barraPesquisa {
+    height: 60px;
+    width: 559px;
+    background: #474747;
+    opacity: 0.04;
+    border-radius: 8px;
+}
+
 ._head_Dois {
     display: flex;
     justify-content: start;
