--- a/src/components/Header/Nav/index.css
+++ b/src/components/Header/Nav/index.css
@@ -1,8 +1,8 @@
 .mx-2{
     text-decoration: none;
-    color: black;
+    color: #666;
     background-color: transparent;
-};
+}
 .mx-2 :hover{
     text-decoration: dashed;
     color: rgb(185, 20, 50);
