--- a/src/components/banner-footer/index.css
+++ b/src/components/banner-footer/index.css
@@ -1,4 +1,4 @@
-_imagem{
+.imagem2{
     position: absolute;
 width: 573px;
 height: 330px;
@@ -8,7 +8,7 @@ top: 2852px;
 background: url(tenis.png);
 }
 
-_imagem{
+.imagem{
     position: absolute;
 width: 466px;
 height: 466px;
@@ -18,12 +18,13 @@ top: 2824px;
 background: linear-gradient(180deg, rgba(66, 0, 255, 0.25) -40.67%, rgba(255, 255, 255, 0) 100%);
 }
 
-_r2{
+.r2{
     position: absolute;
 width: 116px;
 height: 22px;
 left: 692px;
 top: 2843px;
+display: flex;
 
 font-family: 'Inter';
 font-style: normal;
@@ -36,7 +37,7 @@ letter-spacing: 0.75px;
 color: #C92071;
 }
 
-_r27{
+.r27{
     position: absolute;
 width: 514px;
 height: 100px;
@@ -54,7 +55,7 @@ letter-spacing: 1px;
 
 color: #474747;
 }
-_r271{
+.r271{
     position: absolute;
 width: 589px;
 height: 112px;
@@ -71,7 +72,7 @@ letter-spacing: 0.75px;
 
 color: #474747;
 }
-_r273{
+.r273{
     position: absolute;
 left: 0%;
 right: 0%;
@@ -90,4 +91,13 @@ text-align: center;
 letter-spacing: 0.75px;
 
 color: #F5F5F5;
+}
+.r273{position: absolute;
+left: 0%;
+right: 0%;
+top: 0%;
+bottom: 0%;
+
+background: #C92071;
+border-radius: 8px;
 }
