--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,3 +1,24 @@
 .cadastro{
     color:#333;
 }
+.logo{
+    left: 99px;
+    top: 47px;
+}
+.cadastro{
+    top: 50px;
+    left: 991px;
+    width: 102px;
+    height: 28px;
+}
+.entrar{
+    width: 114px;
+    height: 40px;
+    left: 1123px;
+    top: 44px;
+}
+.carrinho{
+    color: #C92071;
+    left: 1321px;
+    top: 62px;
+}
