--- a/src/components/Produto/Collection/Linkicons/index.css
+++ b/src/components/Produto/Collection/Linkicons/index.css
@@ -1,5 +1,5 @@
 .titulo {
-
+    margin-top: 100px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
@@ -11,7 +11,9 @@
 }
 
 .botao {
+    margin-top: 20px;
     display: flex;
+    
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -34,6 +36,7 @@
     font-size: 14px;
     line-height: 22px;
     
+
     text-align: center;
     letter-spacing: 0.75px;
     color: #474747;
