--- a/src/Pages/Produtos/styles.css
+++ b/src/Pages/Produtos/styles.css
@@ -13,7 +13,7 @@
 ._head_Um {
     display: flex;
     justify-content: space-around;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 50%;
     width: 100%;
 }
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: start;
     align-items: flex-end;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-size: 18px;
     height: 50%;
     width: 80%;
