--- a/src/components/Produto/Collection/Linkicons/index.css
+++ b/src/components/Produto/Collection/Linkicons/index.css
@@ -16,26 +16,26 @@
 
 .botao {
     margin-top: 20px;
-    
     width: 104px;
     height: 104px;
+    border-radius: 125px;
     background: #FFFFFF;
     box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.05);
-    
-
 }
 
 .texto {
-    
+    margin-top: 12px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 22px;
-    
-
     text-align: center;
     letter-spacing: 0.75px;
     color: #474747;
-
+}
+.botao1 {
+    width: 104px;
+    height: 104px;
+    border-radius: 125px;
 }
