--- a/src/Pages/Cadastro/style.css
+++ b/src/Pages/Cadastro/style.css
@@ -1,36 +1,39 @@
+.logo{
+    width: 1440px;
+    height: 80px;
+    height: 80px;
+    border-radius: 0px;
+    padding: 25px 100px 25px 100px;
+
+}
 .criar{
     height: 36px;
     width: 440px;
-    top: 150px;
-    left: 344px;
+    margin-left: 344px;
+    margin-top: 70px;
+    
 }
 span.conta{
     font-weight: 700;
     font-size: 32px;
     line-height: 36px;
     letter-spacing: 1px;
-    top: 150px;
-    left: 344px;
 }
 .cad{
     background-color: white;
 }
-.quebra{
-    width: 690px;
-    top: 280px;
-    left: 375px;
-}
 .formu1{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    align-items: flex-start;
     padding: 30px;
     width: 750px;
     height: 538px;
-    left: 345px;
-    top: 208px;
     background: white;
     border-radius: 4px;
+    margin-top: 22px;
+    margin-left: 345px;
+    gap: 20px;
 }
 .info{
     width: 165px;
@@ -41,18 +44,81 @@ span.conta{
     text-align: center;
     color: #474747;
 }
+.quebra{
+    width: 690px;
+}
 .labelNome{
-    width: 427.35px;
+    width: 427.53px;
     height: 24px;
-    left: 375px;
-    top: 300px;
-    color: #474747;
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 12px;
-    letter-spacing: 0.75px;
+    line-height: 24px;
+    color: #474747;
 }
 .inputNome{
+    border: none;
     width: 522.24px;
     height: 28px;
-    
+    color: #666666;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    margin-top: 21px;
+}
+.labelCpf{
+    width: 427.53px;
+    height: 24px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 24px;
+    color: #474747;
+    margin-top: 20px;
+}
+.inputCpf{
+    border: none;
+    width: 522.24px;
+    height: 28px;
+    color: #666666;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    margin-top: 21px;
+}
+.labelEmail{
+    width: 427.53px;
+    height: 24px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 24px;
+    color: #474747;
+    margin-top: 20px;
+}
+.inputEmail{
+    border: none;
+    width: 522.24px;
+    height: 28px;
+    color: #666666;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    margin-top: 21px;
+}
+.labelCelular{
+    width: 427.53px;
+    height: 24px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 24px;
+    color: #474747;
+    margin-top: 20px;
+}
+.inputCelular{
+    border: none;
+    width: 522.24px;
+    height: 28px;
+    color: #666666;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    margin-top: 21px;
 }
