--- a/src/Pages/TodosProdutos/styles.css
+++ b/src/Pages/TodosProdutos/styles.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #E5E5E5;
+    background-color: #F9F8FE;
     height: auto;
 }
 
@@ -22,15 +22,18 @@
 
 .div2 {
     display: flex;
-    background-color: rgb(86, 106, 163);
     width: 90%;
     height: 2100px;
 }
 
 .divConteudo {
-    background-color: rgb(0, 250, 13);
-    opacity: 0.4;
-    width: 90%;
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: space-between;
+    align-content: flex-start;
+    margin:  0px 0px;
+    padding: 0px 0px;
+    width: 904px;
     height: 2000px;
 }
 
@@ -38,7 +41,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 30px;
-    width: 308px;
+    width: 280px;
     height: 720px;
     background: #FFFFFF;
     border-radius: 4px;
