--- a/src/Pages/TodosProdutos/styles.css
+++ b/src/Pages/TodosProdutos/styles.css
@@ -8,8 +8,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #F9F8FE;
+    background-color: rgb(240, 240, 240);
     height: auto;
+    
 }
 
 .div1 {
