--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,23 +15,27 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    margin: 0px;
-    width: 260px;
+    margin: 0px 10px 0px 60px;
+    width: 200px;
     height: 60px;
-    padding-left: 58px;
 }
 .cadastro{
     color:#333;
-    width: 102px;
+    width: 104px;
     height: 60px;
     text-align: center;
     padding-top: 1rem;
+    margin: 0px 5px 0px 5px ;
 }
 .entrar{
-    width: 114px;
+    width: 120px;
     height: 60px;
     text-align: center;
     padding-top: 0.5rem;
+}
+.botaoEntrar{
+    width: 110px;
+    height: 40px;
 }
 .carrinho{
     color: #C92071;
