arrumando o estilo pra ficar igual do figma

--- a/src/components/Produto/Collection/index.css
+++ b/src/components/Produto/Collection/index.css
@@ -1,3 +1,19 @@
- .button {
-    color:deeppink;
- }
+.button {
+   color:deeppink;
+}
+.colecaoBase{
+   margin-left: 100px;
+   margin-top: 38px;
+}
+.destaque{
+   width: 283px;
+   height: 38px;
+   margin-bottom: 20px;
+}
+.dest{
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 38px;
+   color: #474747;
+   letter-spacing: 0.75px;
+}
