ajustei o Header e a pagina Home

--- a/src/components/ProdutosAlta/produtosAlta.css
+++ b/src/components/ProdutosAlta/produtosAlta.css
@@ -3,8 +3,8 @@
 .ProdutosAlta{
     font-family: 'Inter', sans-serif;
     background-color: #F9F8FE;
-    padding: 1rem;
-    
+    /* padding: 1rem; */
+    padding-left: 100px;
 }
 
 h5{
@@ -24,6 +24,7 @@ h5{
 
 .cards{
     background-color: #F9F8FE;
+    padding-left: 100px;
 }
 
 
