--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .headerBase{
     display: flex;
     flex-direction: column;
@@ -9,25 +14,26 @@
 .actionsHeader{
     display: flex;
     align-items: flex-end;
+    justify-content: start;
     height: 96px;
 }
-.logo{
+.logoHeaderHome{
     display: flex;
     justify-content: start;
-    align-items: center;
-    margin: 0px 10px 0px 60px;
-    width: 200px;
-    height: 60px;
+    margin-left: 104px;
+    margin-right: 44px;
+    width: 260px;
+    height: 44px;
 }
-.cadastro{
+.cadastroHeader{
+    text-align: center;
     color:#333;
     width: 104px;
     height: 60px;
-    text-align: center;
     padding-top: 1rem;
-    margin: 0px 5px 0px 5px ;
+    margin: 0px 48px 0px 48px ;
 }
-.entrar{
+.entrarHeader{
     width: 120px;
     height: 60px;
     text-align: center;
@@ -42,6 +48,8 @@
     height: 60px;
     text-align: center;
     padding-top: 0.5rem;
+    margin-left: 72px;
+    margin-right: 100px;
 }
 .navHeader{
     display: flex;
@@ -49,5 +57,7 @@
     justify-content: end;
     height: 96px;
     padding-bottom: 20px;
-    padding-left: 58px;
+    margin-left: 100px;
+    font-size: 16px;
+    color: #474747;
 }
