--- a/src/components/ProdutosAlta/produtosAlta.css
+++ b/src/components/ProdutosAlta/produtosAlta.css
@@ -4,11 +4,10 @@
     font-family: 'Inter', sans-serif;
     background-color: #F9F8FE;
     padding: 1rem;
-    
 }
 
 h5{
-    font-size: 18px;
+    font-size: 24px;
     line-height: 34px;
     color: #474747;
 }
@@ -18,8 +17,6 @@ h5{
     font-size: 0.8rem;
     color: #C92071;
     padding: 2.5rem;
-    
-    
 }
 
 .cards{
@@ -56,7 +53,6 @@ h5{
 }
 
 .discount{
-  
     background-color:  #E7FF86;
     font-weight: bold;
     border-radius: 50%;
@@ -65,21 +61,17 @@ h5{
     border: none;
     width: 80px;
     height: 30px;
-    
-    
-
 }
 
 .dis{
-    position: absolute;
     top: 10px;
     left: 20px;
     z-index: 1000;
-    
 }
 .cartao{
-    position: relative;
-    
+    width: 292px;
+    height: 321px;
+
 }
 
 .discount2{
