--- a/src/Pages/TodosProdutos/styles.css
+++ b/src/Pages/TodosProdutos/styles.css
@@ -8,15 +8,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(240, 240, 240);
+    background: #F9F8FE;
     width: 100%;
-    height: auto; 
+    height: 2630px; 
 }
 .div1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 80%;
     height: 100px;
 }
 .div2 {
@@ -29,16 +29,12 @@
     flex-flow: wrap row;
     justify-content: space-between;
     align-content: flex-start;
-    margin:  0px 0px;
-    padding: 0px 0px;
-    width: 904px;
-    height: 2000px;
 }
 .formTodosProdutos {
     display: flex;
     flex-direction: column;
     padding-left: 30px;
-    width: 240px;
+    width: 308px;
     height: 720px;
     background: #FFFFFF;
     border-radius: 4px;
