--- a/src/Pages/TodosProdutos/styles.css
+++ b/src/Pages/TodosProdutos/styles.css
@@ -16,13 +16,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    padding: 0 100px;
+    width: 100%;
     height: 100px;
 }
 .div2 {
     display: flex;
-    width: 90%;
+    padding: 0 100px;
+    width: 100%;
     height: 2100px;
+
 }
 .divConteudo {
     display: flex;
@@ -34,6 +37,8 @@
     display: flex;
     flex-direction: column;
     padding-left: 30px;
+    padding-right: 30px;
+    margin-right: 20px;
     width: 308px;
     height: 720px;
     background: #FFFFFF;
